@@ -1,4 +1,5 @@
 1.0.0
+ * Improve logging for bulk writes and on task failures (CASSANDRA-19331)
  * Allow setting TTL for snapshots created by Analytics bulk reader (CASSANDRA-19273)
  * Fix range split and use open-closed range notation consistently (CASSANDRA-19325)
  * Add integration tests using in-jvm-dtest to cover blocklisted instances (CASSANDRA-19272)
